-Added an event for the Arumer Zwarte Hoop
-Added an event for the spread of Maize in Europe in the 16th century
-Added 1 new estate privilege: 1 for Muslum Andalusian nations (Hire Jewish Viziers/Dhimmis)
-Buffed invading nations
-Minor history changes especially during the Danish Interregnum and around Weimar
-Fixed CTD caused by missing Epic Games store button
-Some more missions now utilise monuments if you own Leviathan
-Canals will no longer randomly spawn before when they are supposed to be built
-Doubled the total number of cardinals and increased the number of cardinals per country and on gamestart
-The Prussian Confederacy will start with more provinces
-Revolutionary and reactionary rebellions will be larger when a revolution starts
-Estates will no longer demand the construction of a manufactory before tech 32
-The Golden Horde and Ilkhanate will now start as historical friends, however, they will become historical rivals later on
-Tribal land should no longer become uncolonized randomly
-Natives can now conquer land and vassalize in peace deals
-Natives will get a +200 % tech cost penalty
-Natives can now reform into monarchies properly
-Natives will now lose enough reform progress upon reforming preventing them to select further reforms Immediately afterwards
-Federations will no longer be able to centralize
-Improved the code of the decision for Byzantium to reform their government (thanks to HawkV)
-Reworked Byzantine 'Repair the Defenses' decision to only require sufficient number of forts in Anatolian border regions
-Optimised 'Centralize the Realm' decision to hopefully cause way less lag than it used to
-Fixed some overlapping interface
-Instances of Reform Progress growth modifier will now work correctly again
-Removed war canoes from the mod
-Fixed the Castilian Civil War from not ending
-The AI will less often form Lombardy
-The AI will less often become Hussite through decision
-The Hussite Wars can now trigger properly