@@ -1304,6 +1304,9 @@
  vn_dan_western_norway_desc: ""
  vn_dan_found_cities_in_norway_title: "Found Cities in Norway"
  vn_dan_found_cities_in_norway_desc: ""
+ vn_dan_against_swedes_title: "The Swedish Threat"
+ vn_dan_against_swedes_desc: ""
+ vn_dan_against_swedes.tt2: " provinces in the §YSmaland§! region are claimed or cored by you"
 #NORWAY
  #add descs
  vn_nor_settle_succession_title: "Settle the Succession"
