@@ -1304,6 +1304,9 @@
  vn_dan_western_norway_desc: ""
  vn_dan_found_cities_in_norway_title: "Gründet Städte in Norwegen"
  vn_dan_found_cities_in_norway_desc: ""
+ vn_dan_against_swedes_title: "The Swedish Threat"
+ vn_dan_against_swedes_desc: ""
+ vn_dan_against_swedes.tt2: " Provinzen in der Region §YSmaland§! sind Ansprüche oder Kernprovinzen von uns"
 #NORWAY
  #add descs
  vn_nor_settle_succession_title: "Regelt die Nachfolge"
