@@ -11,6 +11,7 @@
 -Added 1 new estate privilege: 1 for Muslum Andalusian nations (Hire Jewish Viziers/Dhimmis)
 -Buffed invading nations
 -Minor history changes especially during the Danish Interregnum and around Weimar
+-Small rework to Denmark's mission tree structure
 -Fixed CTD caused by missing Epic Games store button
 -Some more missions now utilise monuments if you own Leviathan
 -Canals will no longer randomly spawn before when they are supposed to be built
